...
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="HeroesTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchBar"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Marvel" id="RNe-DT-Hgf">
                        <barButtonItem key="backBarButtonItem" title=" " id="Qft-Es-0II"/>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="favorites" id="gY2-pt-hvL">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
                                                    </cells>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="DetailsCollectionView"/>
                                                    </userDefinedRuntimeAttributes>
                                                </collectionView>
...
                        </subviews>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="DetailsView"/>
                        <constraints>
                            <constraint firstItem="OqN-mP-gOu" firstAttribute="top" secondItem="mAx-i6-3qU" secondAttribute="bottom" constant="20" id="BVE-US-Rp5"/>
...
                        </subviews>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="ItemDetailsView"/>
                        <constraints>
                            <constraint firstItem="ZBO-LQ-qOm" firstAttribute="leading" secondItem="kCs-Yx-bUk" secondAttribute="leading" constant="20" id="32g-kz-BdZ"/>
...
