...
                        <gestureRecognizers/>
                        <constraints>
                            <constraint firstAttribute="height" constant="50" id="rTS-JM-GyO"/>
                            <constraint firstAttribute="width" constant="50" id="xKK-13-mTZ"/>
                        </constraints>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="favoriteImage"/>
                        </userDefinedRuntimeAttributes>
                    </imageView>
                </subviews>
                <constraints>
                    <constraint firstItem="OU4-NA-S9G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="88U-th-ba3"/>
                    <constraint firstAttribute="bottom" secondItem="OU4-NA-S9G" secondAttribute="bottom" id="J3P-YA-0rG"/>
...
